--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -129,7 +129,7 @@
 
    filters()
 
-   Create an expandable of post filters when given:
+   Create an expandable of filters when given:
 
    filters:
 
@@ -174,6 +174,21 @@
         ID's are automatically added to certain elements that need them, but if
         you need more than one filters form on a page you'll want to give it a
         unique prefix.
+
+   ==========================================================================
+
+   Examples:
+   
+   blog/index.html
+   newsroom/index.html
+
+        Standard filter usage.
+
+   the-bureau/leadership-calendar/index.html
+   
+        This is an example of using two instances of the filters macro on the
+        same page. One of them uses the full set of options including
+        `id_prefix` so that there are no ID attribute conflicts.
 
    ========================================================================== #}
 
