--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -134,12 +134,17 @@
    filters:
 
         An array of the filters that you want.
-        Possible values: author, calendar, category, date_range, tags.
+        Possible values: author, calendar, category, range_date, tags.
+
+        Note that 'range_date_gte' and 'range_date_lte' have been condensed
+        into 'range_date' for this macro only.
 
         You can add more in filters_form() by adding to the if statement, for
-        example: `{% elif filter == 'NEW_FILTER' %}`. Note that 'range_date_gte'
-        and 'range_date_lte' have been condensed into 'date_range' for this
-        macro only.
+        example: `{% elif filter == 'NEW_FILTER' %}`.
+
+        TODO: Maybe make each filter type its own macro to keep the form macro
+              a little shorter. This would also make the individual filters
+              more reusable elsewhere.
 
    query:
 
