--- a/static/css/bureau.less
+++ b/static/css/bureau.less
@@ -28,6 +28,7 @@
     });
     
     &_list {
+        .webfont-regular();
         .respond-to-min(1024px, {
             .grid_column(6);
         });
