Remove fallback for print footer.gs

--- a/_layouts/print-footer.html
+++ b/_layouts/print-footer.html
@@ -5,14 +5,9 @@
         <div class="wrapper wrapper__match-content">
             <div class="print-footer_left">
                 <div class="print-footer_logo">
-                    <img class="logo u-js-only"
+                    <img class="logo"
                          src="/static/img/logo.svg"
                          alt="Consumer Financial Protection Bureau">
-                    <noscript>
-                        <img class="logo logo__no-js"
-                             src="/static/img/logo.png"
-                             alt="Consumer Financial Protection Bureau">
-                    </noscript>
                 </div>
             </div>
             <div class="print-footer_right short-desc">
