Fixes date range validation.

--- a/_layouts/post-macros.html
+++ b/_layouts/post-macros.html
@@ -444,7 +444,7 @@
             <label for="{{ options.id_range_date_gte }}">
                 From:
             </label>
-            <input class="js-filter_range-date"
+            <input class="js-filter_range-date js-filter_range-date__gte"
                    id="{{ options.id_range_date_gte }}"
                    name="filter_range_date_gte"
                    type="text"
@@ -499,7 +499,7 @@
             <label for="{{ options.id_range_date_lte }}">
                 To:
             </label>
-            <input class="js-filter_range-date"
+            <input class="js-filter_range-date js-filter_range-date__lte"
                    id="{{ options.id_range_date_lte }}"
                    name="filter_range_date_lte"
                    type="text"
