--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -73,8 +73,10 @@
     specific to a single page or section of the site, all new styles should be added to src/static/css/main.less.
 -->
 
+{% block css_global %}
 <!--[if lt IE 9]>      <link rel="stylesheet" href="/static/css/main.ie.min.css"> <![endif]-->
 <!--[if gt IE 8]><!--> <link rel="stylesheet" href="/static/css/main.min.css"> <!--<![endif]-->
+{% endblock css_global %}
     
     {% block css %}
     {% endblock css %}
@@ -183,8 +185,9 @@
     The number of scripts here must be kept to a minimum. Unless adding a significant amount of JS that is
     specific to a single page or section of the site, all custom JS should be added to src/static/js/app.js.
 -->
-
+{% block javascript_global %}
 <script src="/static/js/main.min.js"></script>
+{% endblock javascript_global %}
 
 {% block javascript %}
 {% endblock javascript %}
