--- a/_layouts/print-footer.html
+++ b/_layouts/print-footer.html
@@ -1,56 +1,72 @@
 
-{# Don't use HTML5 elements, PDFReactor won't apply styles to them. #}
+{# This markup gets inserted into the page via CSS using `content: xhtml()`.
+   Do not use HTML5 elements, your rules won't work on them here. #}
 {% macro print_footer() %}
-    <div class="print-footer" role="contentinfo">
-        <div class="wrapper wrapper__match-content">
-            <div class="print-footer_left">
-                <div class="print-footer_logo">
-                    <img class="logo"
-                         src="/static/img/logo.svg"
-                         alt="Consumer Financial Protection Bureau">
-                </div>
-            </div>
-            <div class="print-footer_right short-desc">
-                <span class="print-footer_learn-more">Learn more at consumerfinance.gov.</span>
-                <span class="print-footer_page-num"></span>
+
+<div class="print-footer" role="contentinfo">
+        <div class="print-footer_left">
+            <div class="print-footer_logo">
+                <img class="logo"
+                     src="/static/img/logo.svg"
+                     alt="Consumer Financial Protection Bureau">
             </div>
         </div>
-    </div>
+        <div class="print-footer_right short-desc">
+            <span class="print-footer_learn-more">Learn more at consumerfinance.gov.</span>
+            <span class="print-footer_page-num"></span>
+        </div>
+</div>
+
 {% endmacro %}
 
+
+{# This markup gets inserted into the page via CSS using `content: xhtml()`.
+   Do not use HTML5 elements, your rules won't work on them here. #}
 <style type="text/css">
-@page {
-    size: letter;
-    padding: 0;
-    margin: 0.25in 0.25in 1.25in;
-    /*border: 1px solid red;*/
-    counter-increment: page;
-}
-@page {
-    @bottom-center {
-        /* Linkbreaks within xhtml() cause syntax errors; keep it on one line */
-        content: xhtml('{{ print_footer()|replace("\n", "") }}');
+@media print {
+
+    @page {
+        size: letter;
+        padding: 0;
+        margin: 0.35in 0.35in 1.25in;
+        /*border: 1px solid red;*/
+        counter-increment: page;
     }
-}
-.print-footer {
-    float: left;
-    width: 100%;
-    padding-top: 20px;
-    text-align: right;
-}
-.print-footer_logo {
-    float: left;
-    width: 200px;
-    margin-top: -20px;
-}
-.print-footer_learn-more {
-    font-size: 14px;
-}
-.print-footer_page-num {
-    font-size: 16px;
-    margin-left: 48px;
-}
-.print-footer_page-num:after {
-    content: counter(page) ' of ' counter(pages);
+
+    @page {
+        @bottom-center {
+            {# Linkbreaks within xhtml() cause syntax errors so we need to keep it
+                on one line using `replace()`. -#}
+            content: xhtml('{{ print_footer()|replace("\n", "") }}');
+        }
+    }
+
+    .content_wrapper,
+    .content_main {
+        padding: 0;
+    }
+
+    .print-footer {
+        float: left;
+        width: 100%;
+        padding-top: 20px;
+        text-align: right;
+    }
+    .print-footer_logo {
+        float: left;
+        width: 200px;
+        margin-top: -20px;
+    }
+    .print-footer_learn-more {
+        font-size: 14px;
+    }
+    .print-footer_page-num {
+        font-size: 16px;
+        margin-left: 48px;
+    }
+    .print-footer_page-num:after {
+        content: counter(page) ' of ' counter(pages);
+    }
+
 }
 </style>
