--- a/static/css/main.less
+++ b/static/css/main.less
@@ -94,6 +94,8 @@
 @import (less) "media-object.less";
 @import (less) "meta.less";
 @import (less) "misc.less";
+@import (less) "forms.less";
+@import (less) "lists.less";
 @import (less) "post.less";
 @import (less) "summary.less";
 @import (less) "blog-docs.less";
